# pd

./: CMakeLists.txt  CMakeLists.txt.user.c7a9539  aboutproj.cpp  aboutproj.h  aboutproj.ui  aboutus.cpp  aboutus.h  aboutus.ui  calculations.h  database.cpp  database.h  database.ui  database.ui.autosave  demo.cpp  demo.h  demo.ui  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  palagiarism.cpp  palagiarism.h  palagiarism.ui  palagiarism.ui.autosave  resources.qrc  result.cpp  result.h  result.ui  secpage.cpp  secpage.h  secpage.ui  stringOperations.h  tests.h  tokenization.h  verdict.h
